--- a/theme.css
+++ b/theme.css
@@ -40,3 +40,14 @@ h1 {
     text-align: center;
     color: white;
 }
+
+
+#gifs-appear-here {
+
+    grid-area: gifs;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-column-gap: 10px;
+    grid-row-gap: 10px;
+
+}
